GNOME Bugzilla – Bug 387332
Show error image when 404 or similar
Last modified: 2007-01-12 11:28:16 UTC
See attached image, which is what QuickTime does.
Created attachment 78603 [details] Screenshot-1.png
We need to send a signal in totemPlugin::URLNotify telling the viewer to show an error image. Jakub, can you think of a good one?
Added a test case: 2007-01-11 Bastien Nocera <hadess@hadess.net> * browser-plugin/tests/3.html: add a simple test for http://bugzilla.gnome.org/show_bug.cgi?id=387332 <snip>
Isn't 'image-missing' appropriate here?
2007-01-12 Bastien Nocera <hadess@hadess.net> * browser-plugin/org_gnome_totem_PluginViewer.xml: add the SetErrorLogo method * browser-plugin/totem-plugin-viewer.c: (totem_embedded_pad_pixbuf_for_size), (totem_embedded_set_error_logo): Implement the SetErrorLogo method and show a centred "image-missing" image when a file isn't available which should be * browser-plugin/totemPlugin.cpp: * src/backend/bacon-video-widget-gst-0.10.c: (bacon_video_widget_set_logo), (bacon_video_widget_set_logo_pixbuf): * src/backend/bacon-video-widget-xine.c: (bacon_video_widget_set_logo), (bacon_video_widget_set_logo_pixbuf): * src/backend/bacon-video-widget.h: Implement bacon_video_widget_set_logo_pixbuf() (Closes: #387332)